# desdeo-dash

./: .gitignore  README.md  app.py  lot_sizing.py  nautilus_navigator.py  pyproject.toml
data/: 1_f_data.csv  1_x_data.csv  2_f_data.csv  2_x_data.csv  31726010_f_data.csv  31726010_x_data.csv  37636500_f_data.csv  37636500_x_data.csv  3_x_data.csv  ACW179192B_f_data.csv  ACW179192B_x_data.csv  first_data.csv  second_data.csv
desdeo_dash/: __init__.py  app.py  enautilus.py  lot_sizing.py  nautilus_navigator.py  nimbus.py  plotting.py  server.py
tests/: test_desdeo_dash.py
