[tool.poetry]
name = "desdeo-dash"
version = "0.1.0"
description = ""
authors = ["Giovanni Misitano <gialmisi@student.jyu.fi>"]

[tool.poetry.dependencies]
python = "^3.7"
dash = "^1.2"
dash-daq = "^0.1.7"
pandas = "^0.25.1"
sklearn = "^0.0.0"
desdeo = "^1.1"
desdeo-mcdm = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
mypy = "^0.720.0"
isort = "^4.3"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
docformatter = "^1.3"
pylint = "^2.4.4"
rope = "^0.16.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
